hero class addition

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles.css">
   
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
 <body>
-
+  <section class="hero">
   Exquisite dining since 1989
 
   Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from 
   the comfort of our farmhouse.
 
   Book a table
-
+  </section>
 
 
   Enjoyable place for all the family
