added classes to hero section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
   <section class="hero">
+  <h2 class="dine">dine</h2>
+  
   Exquisite dining since 1989
 
   Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from 
