--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,15 +10,18 @@
   <title>Frontend Mentor | Dine Website Challenge</title>
 </head>
 <body>
+  <!-- HERO -->
   <section class="hero">
-  <h2 class="dine">dine</h2>
-  
-  Exquisite dining since 1989
 
-  Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from 
-  the comfort of our farmhouse.
+    <h2 class="hero-header">dine</h2>
 
-  Book a table
+    <h2 class="hero-subheader">Exquisite dining since 1989</h2>
+
+    <p>Experience our seasonal menu in beautiful country surroundings. Eat the freshest produce from 
+        the comfort of our farmhouse.</p>
+
+    <button class="hero-book">Book a table</button>
+
   </section>
 
 
